github_data_collector/src/data/issue_comment/haad_proxychains.txt
the shadowsocks-libev resolved dns by himself, not use the proxy configed by proxychains.

# proxychains4  /usr/bin/ss-server -c /etc/shadowsocks-libev/config.json -u -v
[proxychains] config file found: /etc/proxychains.conf
[proxychains] preloading /usr/lib/libproxychains4.so
[proxychains] DLL init: proxychains-ng 4.14-git-8-gb8fa2a7
 2019-11-06 01:20:48 INFO: UDP relay enabled
 2019-11-06 01:20:48 INFO: initializing ciphers... aes-256-cfb
 2019-11-06 01:20:48 INFO: using nameserver: 8.8.8.8
 2019-11-06 01:20:48 INFO: tcp port reuse enabled
 2019-11-06 01:20:48 INFO: tcp server listening at 0.0.0.0:8888
 2019-11-06 01:20:48 INFO: udp port reuse enabled
 2019-11-06 01:20:48 INFO: udp server listening at 0.0.0.0:8888
 2019-11-06 01:20:48 INFO: running from root user
 2019-11-06 09:21:29 INFO: accept a connection
 2019-11-06 09:21:29 INFO: connect to csi.gstatic.com:443
 2019-11-06 09:21:29 INFO: successfully resolved csi.gstatic.com
[proxychains] Random chain  ...  127.0.0.1:3128  ...  172.217.27.195:443  ...  OK

I downloaded the latest release.  
I followed the instructions:  
```
./configure
make
sudo make install
```
I ran:
`./proxychains4 -f ./proxychains.conf target.com`

I received the following errors:  
```
[proxychains] config file found: ./proxychains.conf
[proxychains] preloading ./libproxychains4.so
proxychains can't load process....: No such file or directory
```

But when I run `ls` I have the file `libproxychains4.so` so I don't understand what is the problem?



Proxychains used to work well, but now it's not working anymore. I am on latest Kali version.

These are my settings in resolv.conf:

dynamic_chain
tcp_read_time_out 15000
tcp_connect_time_out 8000
socks4 127.0.0.1 9050
socks5 127.0.0.1 9050

I started tor service before I use proxychains.

When I try to open a website I get these errors:

`|DNS-request| adservice.google.com 
|DNS-response|: apis.google.com does not exist
|DNS-response|: www.google.com does not exist
|DNS-request| apis.google.com 
|DNS-request| www.google.com 
|DNS-response|: www.gstatic.com does not exist
|DNS-request| www.gstatic.com 
Traceback (most recent call last):
  File "/usr/local/bin/dig", line 5, in <module>
    from dig.cmdline import main
  File "/usr/local/lib/python3.7/dist-packages/dig/cmdline.py", line 31, in <module>
    from dig.translate import Translator,Speaker
  File "/usr/local/lib/python3.7/dist-packages/dig/translate.py", line 4, in <module>
    from translate_api import TranslateService,TTSService
ModuleNotFoundError: No module named 'translate_api'
Traceback (most recent call last):
  File "/usr/local/bin/dig", line 5, in <module>
    from dig.cmdline import main
  File "/usr/local/lib/python3.7/dist-packages/dig/cmdline.py", line 31, in <module>
    from dig.translate import Translator,Speaker
  File "/usr/local/lib/python3.7/dist-packages/dig/translate.py", line 4, in <module>
    from translate_api import TranslateService,TTSService
ModuleNotFoundError: No module named 'translate_api'
`

page record for 0x7f7d64d010 was not found (block_size=16)
$ make && make install
cc -Wall -O2 -g -std=c99 -D_GNU_SOURCE -pipe -DTHREAD_SAFE -Werror   -DLIB_DIR=\"/usr/local/lib\" -DINSTALL_PREFIX=\"/usr/local\" -DDLL_NAME=\"libproxychains4.so\" -DSYSCONFDIR=\"/usr/local/etc\"  -fPIC -c -o src/core.o src/core.c
src/core.c:856:2: error: implicit declaration of function
      'getservbyname_r' is invalid in C99
      [-Werror,-Wimplicit-function-declaration]
        getservbyname_r(service, NULL, se_buf, buf, buf_...
        ^
src/core.c:856:2: note: did you mean 'getservbyname'?
/data/data/com.termux/files/usr/include/netdb.h:261:17: note:
      'getservbyname' declared here
struct servent* getservbyname(const char* __name, const ...
                ^
1 error generated.
make: *** [Makefilet:63: src/core.o] Error 1
$

I have no idea. please help
How shold I config if I only want to redirect http reqeusts on a single ip:port such as localhost:8080
Instead of having the proxy in the configuration file, is there any way to pass them as an option in the command line ?

proxychain --http_proxy http://127.0.0.1:8080 telnet myRemoteHost

The purpose is that I need a very specific proxy for one application and another proxy for another application.

Hi i`m new in proxychains,
Can i set localnet as a domain instead of a ip address with mask like this:

localnet *.example.com

Thank you very much!
proxychains with the following configuration (`$HOME/.proxychains/proxychains.conf`) works well for me on the local machine.
```
strict_chain
quiet_mode
tcp_read_time_out 15000
tcp_connect_time_out 8000
localnet 127.0.0.1/255.0.0.0

[ProxyList]
socks5     127.0.0.1 1080
```
How do I configure it to work with a remote socks5 proxy? I tried the following configuration (`127.0.0.1 -> server_ip`) but it failed to work.
```
strict_chain
quiet_mode
tcp_read_time_out 15000
tcp_connect_time_out 8000
localnet 127.0.0.1/255.0.0.0

[ProxyList]
socks5     server_ip 1080
```
I noticed that it is not possible to add a proxy in /etc/proxychains.conf by giving the domain name instead of the IP address of the proxy, is it normal? (I tested with a subdomain of an HTTP proxy using credentials)
It would be nice to have this feature, I spent some time figuring why proxychains did not work.
ProxyChains output some message like the below. How can I suppress this message?
```
ProxyChains-?-? (http://proxychains.sf.net)
```